<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/purple_500"
        app:itemIconTint="@drawable/navigation_selector"
        app:itemTextColor="@drawable/navigation_selector"
        app:menu="@menu/menu_navigation" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="670dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="61dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="61dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/timeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/distanceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/distanceTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_distance"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/speedtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed_heading"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/speedTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_speed"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="5dp"
                    android:insetRight="5dp"
                    android:onClick="onStartPressed"
                    android:text="@string/start" />

                <Button
                    android:id="@+id/stopButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetLeft="5dp"
                    android:insetRight="5dp"
                    android:onClick="onStopPressed"
                    android:text="@string/end_run" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>